TabLayout for AcademicActivity implemented, ListView added to the class schedule fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name=".PhysicalSchedulerActivity"
             android:label="@string/title_activity_physical_scheduler"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AcademicActivity"
+            android:label="@string/title_activity_academic"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
