--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="@string/title_activity_physical_scheduler"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activities.Activity_AcademicSchedulerRecorder"
+            android:name=".activities.AcademicActivity"
             android:label="@string/title_activity_academic"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
