--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,15 @@ dependencies {
     implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
         transitive = true
     }
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.google.android.gms:play-services-auth:15.0.1'
+    api 'pub.devrel:easypermissions:0.3.0'
+    api('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    api('com.google.apis:google-api-services-calendar:v3-rev305-1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.alamkanak:android-week-view:1.2.6'
 }
