Week View library changed to a newer forked version. Calendar class simplified.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.github.alamkanak:android-week-view:1.2.6'
+    implementation 'com.github.quivr:android-week-view:2.2.2'
 }
