--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.quivr:android-week-view:2.2.2'
+
+    implementation "com.android.support:support-emoji:28.0.0-alpha1"
+    implementation "com.android.support:support-emoji-appcompat:28.0.0-alpha1"
+    implementation "com.android.support:support-emoji-bundled:28.0.0-alpha1"
 }
