Added sleep quality data activity. Stats fragment/tab has a nested listview. Parent is a list of categories, each category has a list of stats. No way to add quite yet but there will be soon.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,11 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".AlarmReceiver" />
+
+        <activity
+            android:name=".activities.Activity_SleepData"
+            android:label="@string/title_activity__sleep_data"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
