--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+}
+
+repositories {
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -48,4 +56,5 @@ dependencies {
     implementation "com.android.support:support-emoji:28.0.0-alpha1"
     implementation "com.android.support:support-emoji-appcompat:28.0.0-alpha1"
     implementation "com.android.support:support-emoji-bundled:28.0.0-alpha1"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 }
